// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`minMax 1`] = `
<div>
  test component
  
  <span>
    
  </span>
   
  <div
    class="seu-checkbox-group"
  >
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Shanghai
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Beijing
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Guangzhou
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Shenzhen
      </span>
    </label>
  </div>
</div>
`;

exports[`minMax 2`] = `
<div>
  test component
  
  <span>
    Shanghai
  </span>
   
  <div
    class="seu-checkbox-group"
  >
     
    <label
      aria-disabled="true"
      class="seu-checkbox-button is-checked is-disabled"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        disabled=""
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Shanghai
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Beijing
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Guangzhou
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Shenzhen
      </span>
    </label>
  </div>
</div>
`;

exports[`minMax 3`] = `
<div>
  test component
  
  <span>
    Shanghai,Beijing
  </span>
   
  <div
    class="seu-checkbox-group"
  >
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button is-checked"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Shanghai
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button is-checked"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Beijing
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Guangzhou
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Shenzhen
      </span>
    </label>
  </div>
</div>
`;

exports[`minMax 4`] = `
<div>
  test component
  
  <span>
    Shanghai,Beijing,Guangzhou
  </span>
   
  <div
    class="seu-checkbox-group"
  >
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button is-checked"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Shanghai
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button is-checked"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Beijing
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button is-checked"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Guangzhou
      </span>
    </label>
     
    <label
      aria-disabled="true"
      class="seu-checkbox-button is-disabled"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        disabled=""
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Shenzhen
      </span>
    </label>
  </div>
</div>
`;

exports[`minMax 5`] = `
<div>
  test component
  
  <span>
    Guangzhou
  </span>
   
  <div
    class="seu-checkbox-group"
  >
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Shanghai
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Beijing
      </span>
    </label>
     
    <label
      aria-disabled="true"
      class="seu-checkbox-button is-checked is-disabled"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        disabled=""
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Guangzhou
      </span>
    </label>
     
    <label
      aria-disabled="false"
      class="seu-checkbox-button"
      role="checkbox"
    >
      <input
        class="seu-checkbox-button__original"
        type="checkbox"
      />
       
      <span
        class="seu-checkbox-button__inner"
      >
        Shenzhen
      </span>
    </label>
  </div>
</div>
`;
